# icaltool

./: .gitignore  README.md  activate_venv.sh  run.sh  setup.cfg  setup.py
src/icaltool/: __init__.py  datatypes.py  icaltool.py
src/icaltool/log/: log.py
