[metadata]
name = ICalTool
description = Work with calendar data (`.ics`, `.csv`)
long_description=README.md, LICENSE,
long_description_content_type="text/markdown",
author = Eike Kühn
author_email = eike.kuehn@pixelwoelkchen.de
#keywords = one, two
license = The Unlicense
url = randomchars42.github.com/Sortingshop
classifiers =
  License :: Public Domain
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6

[options]
packages = icaltool,
package_dir =
  = src
setup_requires =
  docutils>=0.3
  wheel
  setuptools_scm

[options.entry_points]
console_scripts =
    run = icaltool.icaltool:main
